# ESP32-X3DH-Demo

./: .gitignore  LICENSE  README.md  create_cluster.sh  docker-compose.yml  down_service.sh  gen_certs.sh  generate_keys.py  k8s-deployment.yaml  minikube_down.sh  pgadmin.yaml  postgres-cluster.yaml  start_service.sh  update_wg_config.sh
client/: CMakeLists.txt  sdkconfig.defaults
client/components/libxeddsa/: CMakeLists.txt
client/components/libxeddsa/ref10/: CMakeLists.txt
client/main/: CMakeLists.txt  app_main.c  common.c  common.h  http_client.c  http_client.h  idf_component.yml  mqtt_manager.c  mqtt_manager.h  x3dh_client.c
server/: .dockerignore  Dockerfile  requirements.txt  server.py  start.sh
